--- a/Yelp NLP Model with Pipeline.ipynb
+++ b/Yelp NLP Model with Pipeline.ipynb
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -585,11 +585,11 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.93      0.61      0.73       228\n",
+      "           1       0.92      0.63      0.75       228\n",
       "           5       0.92      0.99      0.95       998\n",
       "\n",
       "    accuracy                           0.92      1226\n",
-      "   macro avg       0.92      0.80      0.84      1226\n",
+      "   macro avg       0.92      0.81      0.85      1226\n",
       "weighted avg       0.92      0.92      0.91      1226\n",
       "\n"
      ]
@@ -598,6 +598,48 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(y_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4222    WOW!!! A real European bakery!  This was aweso...\n",
+       "6605    The family and I love this place, as does anyo...\n",
+       "2835    My boyfrind and I attended here this past week...\n",
+       "8396    Attention all parents, nannies, guardians etc....\n",
+       "4915    After bad experience, I will never return.  It...\n",
+       "                              ...                        \n",
+       "1259    Places like Made make me realize that there is...\n",
+       "9046    Busy place, but everyone is nice and I keep ha...\n",
+       "7802    I called several pool service companies before...\n",
+       "8899    The last time I was at The Vig, they tricked m...\n",
+       "1833    Papago has a great beer selection & awesome fo...\n",
+       "Name: text, Length: 1226, dtype: object"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data=X_test)\n",
+    "df['Predictions'] = predictions\n",
+    "df.to_csv('Output')"
    ]
   }
  ],
